Fixing delete account message alignment.

--- a/src/index.css
+++ b/src/index.css
@@ -444,12 +444,12 @@ button {
 /************************ POLL PAGE ************************/
 #poll-main-current {
     display: grid;
-    gap:20px;
+    gap: 20px;
 }
 
 #poll-main-current-details {
     display: grid;
-    gap: 10px;
+    gap: 15px;
 }
 
 #poll-main-editing {
@@ -583,6 +583,7 @@ button {
     display: grid;
     gap: 10px;
     justify-items: center;
+    text-align: center;
 }
 
 .profile.buttons {
